fixes layout problem

--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -6268,7 +6268,7 @@ form.destroy-link {
 }
 
 .index-bid-container {
-  min-height: 500px;
+  min-height: 550px;
 }
 .index-bid-container img {
   max-height: 240px;
